initial work on oidc support
