# docs/swagger.json
@@ -12,6 +12,15 @@
         }
     },
     "paths": {
+        "/callback": {
+            "get": {
+                "description": "the OIDC callback endpoint",
+                "tags": [
+                    "auth"
+                ],
+                "responses": {}
+            }
+        },
         "/datasets": {
             "post": {
                 "description": "Ingest a new dataset",
@@ -23,6 +32,15 @@
                 ],
                 "tags": [
                     "datasets"
+                ],
+                "responses": {}
+            }
+        },
+        "/login": {
+            "get": {
+                "description": "the OIDC login endpoint",
+                "tags": [
+                    "auth"
                 ],
                 "responses": {}
             }
